# vera

./: .coderabbit.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CNAME  CONTRIBUTING.md  DESIGN.md  DE_BRUIJN.md  ENVIRONMENT.md  EXAMPLES.md  FAQ.md  HISTORY.md  KNOWN_ISSUES.md  LICENSE  LSP_SERVER.md  MUTATION.md  README.md  ROADMAP.md  SECURITY.md  SKILL.md  SKILLS.md  TESTING.md  TOOLCHAIN.md  WASI.md  codecov.yml  hello.txt  mutation-summary.csv  mutation.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  spec_issue.md
.github/workflows/: ci.yml  codeql.yml  dependabot-uv-lock.yml  nightly-stress.yml
docs/: CNAME  LSP_SERVER.md  SKILL.md  index.html  index.md  llms-full.txt  llms.txt  robots.txt  sitemap.xml
docs/.well-known/: ai-plugin.json
editors/: README.md
editors/textmate/: README.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  extension.js  language-configuration.json  package-lock.json  package.json
examples/: README.md  absolute_value.vera  array_utilities.vera  async_futures.vera  async_http_fanout.vera  base64.vera  closures.vera  collections.vera  effect_handler.vera  factorial.vera  file_io.vera  fizzbuzz.vera  gc_pressure.vera  generics.vera  hello_world.vera  html.vera  http.vera  http_server.vera  increment.vera  inference.vera  inference_mock.vera  io_operations.vera  json.vera  life.vera  list_ops.vera  markdown.vera  modules.vera  mutual_recursion.vera  nested_closures.vera  pattern_matching.vera  quantifiers.vera  read_char.vera  refinement_types.vera  regex.vera  safe_divide.vera  string_ops.vera  string_utilities.vera  url_encoding.vera  url_parsing.vera
examples/vera/: collections.vera  math.vera
scripts/: build_site.py  check_changelog_updated.py  check_conformance.py  check_diagnostic_fields.py  check_doc_builtin_shadowing.py  check_doc_counts.py  check_e602_clean.py  check_examples.py  check_examples_doc.py  check_examples_readme.py  check_explicit_encoding.py  check_faq_examples.py  check_html_examples.py  check_licenses.py  check_limitations_sync.py  check_readme_examples.py  check_site_assets.py  check_skill_examples.py  check_spec_examples.py  check_version_sync.py  check_walker_coverage.py  check_wheel_availability.py  doc_annotations.py  fix_allowlists.py  mutation_report.py
spec/: 00-introduction.md  01-lexical-structure.md  02-types.md  03-slot-references.md  04-expressions.md  05-functions.md  06-contracts.md  07-effects.md  08-modules.md  09-standard-library.md  10-grammar.md  11-compilation.md  12-runtime.md  13-wasi.md
tests/: checker_helpers.py  codegen_helpers.py  conftest.py  test_ast.py  test_browser.py  test_build_site.py  test_check_changelog_updated.py  test_check_doc_counts.py  test_check_explicit_encoding.py  test_check_limitations_sync.py  test_check_walker_coverage_597.py  test_checker.py  test_checker_apply_fn.py  test_checker_builtins_collections.py  test_checker_builtins_strings.py  test_checker_effects.py  test_checker_errors.py  test_checker_functions.py  test_checker_int_nat.py  test_checker_modules.py  test_checker_patterns.py  test_checker_types.py  test_cli.py  test_codegen.py  test_codegen_arrays.py  test_codegen_calls.py  test_codegen_closures.py  test_codegen_collections.py  test_codegen_contracts.py  test_codegen_coverage.py  test_codegen_data_types.py  test_codegen_decimal.py  test_codegen_effects.py  test_codegen_expressions.py  test_codegen_gc_alloc.py  test_codegen_gc_reclamation.py  test_codegen_gc_rooting.py  test_codegen_host_effects.py  test_codegen_infrastructure.py  test_codegen_interpolation.py  (+62 more)
tests/conformance/: ch01_bool_literals.vera  ch01_byte_literals.vera  ch01_comments.vera  ch01_float_literals.vera  ch01_int_literals.vera  ch01_string_escapes.vera  ch02_adt_basic.vera  ch02_adt_recursive.vera  ch02_builtin_types.vera  ch02_byte_refinement.vera  ch02_generics.vera  ch02_option_result.vera  ch02_refinement_types.vera  ch02_tuple_basic.vera  ch02_type_alias_array.vera  ch03_slot_basic.vera  ch03_slot_indexing.vera  ch03_slot_let_chains.vera  ch03_slot_noncommutative.vera  ch03_slot_result.vera  ch03_typed_holes.vera  ch04_arithmetic.vera  ch04_array_construction.vera  ch04_array_ops.vera  ch04_boolean_ops.vera  ch04_comparison.vera  ch04_if_else.vera  ch04_int_overflow.vera  ch04_let_binding.vera  ch04_match_basic.vera  ch04_match_nested.vera  ch04_nat_binding.vera  ch04_nat_int_widening.vera  ch04_nat_subtraction.vera  ch04_parse_completeness.vera  ch04_pipe_module_call.vera  ch04_pipe_operator.vera  ch04_primitive_obligations.vera  ch04_string_builtins.vera  ch04_string_interpolation.vera  (+70 more)
vera/: README.md  __init__.py  _since.py  ast.py  checker.py  cli.py  codegen.py  environment.py  errors.py  formatter.py  grammar.lark  introspect.py  markdown.py  monomorphize.py  parser.py  prelude.py  registration.py  resolver.py  skip.py  slots.py  smt.py  tester.py  transform.py  types.py  verifier.py  wasm.py
vera/browser/: __init__.py  emit.py  harness.mjs  runtime.mjs
vera/checker/: __init__.py  calls.py  control.py  core.py  expressions.py  modules.py  registration.py  resolution.py
vera/codegen/: __init__.py  api.py  assembly.py  closures.py  compilability.py  contracts.py  core.py  functions.py  memory.py  modules.py  monomorphize.py  registration.py  skip.py  tail_position.py  wasi.py
vera/lsp/: __init__.py  convert.py  documents.py  extensions.py  features.py  server.py  workflows.py
vera/obligations/: __init__.py  cache.py  core.py  session.py
vera/runtime/: __init__.py  async_http.py  collections.py  decimal.py  heap.py  html.py  http.py  inference.py  json.py  map.py  math.py  md.py  random.py  regex.py  server.py  set.py  state.py  text.py  traps.py  wasi_host.py
vera/wasm/: __init__.py  async_fusion.py  calls.py  calls_arrays.py  calls_containers.py  calls_encoding.py  calls_handlers.py  calls_markup.py  calls_math.py  calls_parsing.py  calls_strings.py  closures.py  context.py  (+7 more)
(+6 files in other folders)
