[project]
name = "vera"
version = "0.0.156"
description = "Vera: a programming language designed for LLMs, with full contracts, algebraic effects, and typed slot references"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Alasdair Allan", email = "alasdair@babilim.co.uk" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "lark>=1.3.1",
    "z3-solver>=4.12",
    "wasmtime>=44.0.0",
]

[project.urls]
Homepage = "https://veralang.dev"
Documentation = "https://veralang.dev"
Repository = "https://github.com/aallan/vera"
Issues = "https://github.com/aallan/vera/issues"
Changelog = "https://github.com/aallan/vera/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.6",
    "mypy>=2.1.0",
    "ruff>=0.15.13",
    "pre-commit>=4.6.0",
    "pip-licenses>=5.5.5",
]

[project.scripts]
vera = "vera.cli:main"

[tool.setuptools.packages.find]
include = ["vera*"]

[tool.setuptools.package-data]
"vera" = ["*.lark"]
"vera.browser" = ["*.mjs"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Stress tests (#596) are skipped from the default per-PR pytest
# run.  They exercise programs at scale (10K-element arrays,
# 1K-deep recursion, 100K Map mutations, etc.) to catch
# scale-dependent codegen/runtime bugs of the #570/#515/#593
# class.  Run via `pytest -m stress`, or as part of the nightly
# CI workflow.
markers = [
    "stress: scale-dependent regression tests (#596); skipped by default, run via -m stress or nightly CI",
]
addopts = "-m 'not stress'"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
# Lark transformer methods are dynamically named callbacks that take
# untyped `args` lists — strict annotations are impractical here.
module = "vera.transform"
disallow_untyped_defs = false
disallow_any_generics = false
no_implicit_reexport = false
warn_return_any = false

[[tool.mypy.overrides]]
# z3-solver does not ship py.typed or stubs.
module = "z3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# wasmtime does not ship complete type stubs.
module = "wasmtime.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Checker mixin classes reference attributes (self.env, self._error, etc.)
# that live on the composed TypeChecker class in core.py.  Mypy cannot
# resolve these across mixin boundaries, so we suppress attr-defined and
# the resulting no-any-return errors in the mixin modules.
module = [
    "vera.checker.resolution",
    "vera.checker.modules",
    "vera.checker.registration",
    "vera.checker.expressions",
    "vera.checker.calls",
    "vera.checker.control",
]
disable_error_code = ["attr-defined", "no-any-return", "has-type"]

[[tool.mypy.overrides]]
# WASM mixin classes reference attributes (self.string_pool, self.alloc_local,
# etc.) that live on the composed WasmContext class in context.py.  Same
# mixin pattern as the checker modules above.
module = [
    "vera.wasm.context",
    "vera.wasm.inference",
    "vera.wasm.operators",
    "vera.wasm.calls",
    "vera.wasm.calls_arrays",
    "vera.wasm.calls_containers",
    "vera.wasm.calls_encoding",
    "vera.wasm.calls_handlers",
    "vera.wasm.calls_markup",
    "vera.wasm.calls_math",
    "vera.wasm.calls_parsing",
    "vera.wasm.calls_strings",
    "vera.wasm.closures",
    "vera.wasm.data",
]
disable_error_code = ["attr-defined", "no-any-return", "has-type"]

[[tool.mypy.overrides]]
# Codegen mixin classes reference attributes (self._fn_sigs, self.string_pool,
# etc.) that live on the composed CodeGenerator class in core.py.  Same
# mixin pattern as the checker and wasm modules above.
module = [
    "vera.codegen.modules",
    "vera.codegen.registration",
    "vera.codegen.monomorphize",
    "vera.codegen.functions",
    "vera.codegen.closures",
    "vera.codegen.contracts",
    "vera.codegen.assembly",
    "vera.codegen.compilability",
]
disable_error_code = ["attr-defined", "no-any-return", "has-type"]
