[project]
name = "vera"
version = "0.0.175"
description = "Vera: a programming language designed for LLMs, with full contracts, algebraic effects, and typed slot references"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Alasdair Allan", email = "alasdair@babilim.co.uk" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "lark>=1.3.1",
    # `>=4.15.5` matches the macOS 15+ baseline structurally: 4.15.5 is the
    # first z3-solver release tagged `macosx_15_0_arm64` (earlier releases
    # were `macosx_13_0_arm64`).  Pinning >=4.15.5 makes the platform support
    # decision explicit in dep resolution — older macOS / older glibc users
    # get a clear "no matching distribution" error instead of a cryptic
    # source-build failure 20 minutes later.  See README §Supported platforms.
    "z3-solver>=4.15.5",
    # `>=45.0.0` is the first wasmtime-py release whose host-import
    # trampoline catches `BaseException` rather than `Exception`
    # (bytecodealliance/wasmtime-py#337).  Vera relies on this so a
    # `KeyboardInterrupt` raised inside a host import (IO.sleep /
    # IO.read_char) unwinds the wasm call safely and re-raises in
    # Python instead of escaping into Rust with an undefined ABI
    # return value (libmalloc SIGABRT, #595).  The exit-130 mapping in
    # `execute()` depends on the raw re-raise; do not lower this pin
    # without restoring the per-host-import `_VeraExit(130)` guards
    # removed in #599.
    "wasmtime>=45.0.0",
]

[project.urls]
Homepage = "https://veralang.dev"
Documentation = "https://veralang.dev"
Repository = "https://github.com/aallan/vera"
Issues = "https://github.com/aallan/vera/issues"
Changelog = "https://github.com/aallan/vera/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Both pure-Python; not gated by check_wheel_availability.py (which
# reads project.dependencies only — optional extras are exempt by
# design, see README §Supported platforms).
lsp = [
    "pygls>=2.0",
    "lsprotocol>=2023.0",
]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.6",
    "mypy>=2.1.0",
    "ruff>=0.15.17",
    "pre-commit>=4.6.0",
    "pip-licenses>=5.5.5",
    # Self-referential extra: dev pulls in [lsp] so CI's single
    # `pip install -e ".[dev]"` can run tests/test_lsp.py without a
    # second pin list to keep in sync (PEP 508 extras self-reference;
    # supported by pip >= 21.2 and uv).
    "vera[lsp]",
]

[project.scripts]
vera = "vera.cli:main"

[tool.setuptools.packages.find]
include = ["vera*"]

[tool.setuptools.package-data]
"vera" = ["*.lark"]
"vera.browser" = ["*.mjs"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Stress tests (#596) are skipped from the default per-PR pytest
# run.  They exercise programs at scale (10K-element arrays,
# 1K-deep recursion, 100K Map mutations, etc.) to catch
# scale-dependent codegen/runtime bugs of the #570/#515/#593
# class.  Run via `pytest -m stress`, or as part of the nightly
# CI workflow.
markers = [
    "stress: scale-dependent regression tests (#596); skipped by default, run via -m stress or nightly CI",
]
addopts = "-m 'not stress'"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
# Lark transformer methods are dynamically named callbacks that take
# untyped `args` lists — strict annotations are impractical here.
module = "vera.transform"
disallow_untyped_defs = false
disallow_any_generics = false
no_implicit_reexport = false
warn_return_any = false

[[tool.mypy.overrides]]
# z3-solver does not ship py.typed or stubs.
module = "z3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# wasmtime does not ship complete type stubs.
module = "wasmtime.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pygls ships partial typing; lsprotocol is typed but the override is
# defensive for transitive attrs.  CI runs mypy strict over vera/lsp/.
module = ["pygls.*", "lsprotocol.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pygls' @server.feature(...) decorator is untyped, which strict mode
# rejects on every handler registration.  Same narrow-exception shape
# as the vera.transform override above.
module = "vera.lsp.server"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# Checker mixin classes reference attributes (self.env, self._error, etc.)
# that live on the composed TypeChecker class in core.py.  Mypy cannot
# resolve these across mixin boundaries, so we suppress attr-defined and
# the resulting no-any-return errors in the mixin modules.
module = [
    "vera.checker.resolution",
    "vera.checker.modules",
    "vera.checker.registration",
    "vera.checker.expressions",
    "vera.checker.calls",
    "vera.checker.control",
]
disable_error_code = ["attr-defined", "no-any-return", "has-type"]

[[tool.mypy.overrides]]
# WASM mixin classes reference attributes (self.string_pool, self.alloc_local,
# etc.) that live on the composed WasmContext class in context.py.  Same
# mixin pattern as the checker modules above.
module = [
    "vera.wasm.context",
    "vera.wasm.inference",
    "vera.wasm.operators",
    "vera.wasm.calls",
    "vera.wasm.calls_arrays",
    "vera.wasm.calls_containers",
    "vera.wasm.calls_encoding",
    "vera.wasm.calls_handlers",
    "vera.wasm.calls_markup",
    "vera.wasm.calls_math",
    "vera.wasm.calls_parsing",
    "vera.wasm.calls_strings",
    "vera.wasm.closures",
    "vera.wasm.data",
]
disable_error_code = ["attr-defined", "no-any-return", "has-type"]

[[tool.mypy.overrides]]
# Codegen mixin classes reference attributes (self._fn_sigs, self.string_pool,
# etc.) that live on the composed CodeGenerator class in core.py.  Same
# mixin pattern as the checker and wasm modules above.
module = [
    "vera.codegen.modules",
    "vera.codegen.registration",
    "vera.codegen.monomorphize",
    "vera.codegen.functions",
    "vera.codegen.closures",
    "vera.codegen.contracts",
    "vera.codegen.assembly",
    "vera.codegen.compilability",
]
disable_error_code = ["attr-defined", "no-any-return", "has-type"]
